Crash when dynamically resampling splines using Spline Length (Point Count) + 1 #96487

Closed
opened 2022-03-15 09:24:40 +01:00 by ilir beqiri · 9 comments

System Information
Operating system: Windows, Linux
Graphics card: Nvidia Quadro P4000, GTX 1700, RTX 3700

Blender Version
Broken: (3.2.0 Alpha, eb0f8317e231, master, 2022-03-01)
Worked: (3.2.0 Alpha, 63891f9dad93, master, 2022-02-27)
Caused by 9ec12c26f1

Short description of error
Blender crashes when I try to dynamically add one point to each spline segment (Spline Length(Point Count) + 1 and feed the result to a Resample node in Count mode). I'm trying to close the gap that opens when Setting Spline Cyclic to OFF on a cyclic spline, by adding one more point to each segment and overlapping it on the first spline point. Thus making it possible to trim multiple cyclic splines (text in this case) at once.

Exact steps for others to reproduce the error

  • Open .blend file
  • Plug integer Node socket in Value socket of Add node
    #96487.blend
**System Information** Operating system: Windows, Linux Graphics card: Nvidia Quadro P4000, GTX 1700, RTX 3700 **Blender Version** Broken: (3.2.0 Alpha, `eb0f8317e231`, master, 2022-03-01) Worked: (3.2.0 Alpha, `63891f9dad93`, master, 2022-02-27) Caused by 9ec12c26f1 **Short description of error** Blender crashes when I try to dynamically add one point to each spline segment (Spline Length(Point Count) + 1 and feed the result to a Resample node in Count mode). I'm trying to close the gap that opens when Setting Spline Cyclic to OFF on a cyclic spline, by adding one more point to each segment and overlapping it on the first spline point. Thus making it possible to trim multiple cyclic splines (text in this case) at once. **Exact steps for others to reproduce the error** - Open .blend file - Plug integer Node socket in `Value` socket of Add node [#96487.blend](https://archive.blender.org/developer/F12928551/T96487.blend)
Author

Added subscriber: @ilirbeqiri

Added subscriber: @ilirbeqiri
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm. Will find the commit which has caused this crash.

Thanks for the report. I can confirm. Will find the commit which has caused this crash.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

First bad commit- 9ec12c26f1
@HooglyBoogly ^

First bad commit- 9ec12c26f1 @HooglyBoogly ^
Hans Goudey self-assigned this 2022-03-15 15:54:58 +01:00

This issue was referenced by 379bd6d50c

This issue was referenced by 379bd6d50ce37e07cbc4fb1e1c47c814f6a7530e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Wow, that was fast! 🙏

Wow, that was fast! 🙏
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96487
No description provided.