Curves: Port count spline length output to new data-block

This fixes T96487 in a similar way to 5791835678067b56,
and also removes the conversion to old curve type for the
"Point Count" output.